--- a/app/views/shared/_buscadoravanzado_services.html.haml
+++ b/app/views/shared/_buscadoravanzado_services.html.haml
@@ -12,7 +12,7 @@
               %ul
                 - @states_group.each do |state|
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "servicios-opciones/state_id/#{state.state_id}"}
                       = state.state_name
                       %small
                         (#{state.total})
