--- a/app/views/shared/_buscadoravanzado_trucks.html.haml
+++ b/app/views/shared/_buscadoravanzado_trucks.html.haml
@@ -12,7 +12,7 @@
               %ul
                 - @states_group.each do |state|
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "camiones-opciones/state_id/#{state.state_id}"}
                       = state.state_name
                       %small
                         (#{state.total})
@@ -24,7 +24,7 @@
               %ul
                 - @brand_group.each do |brand|
                   %li
-                    %a{:href => "#"}
+                    %a{:href =>"/camiones-opciones/brand_truck_id/#{brand.brand_truck_id}"}
                       = brand.brand_name
                       %small
                         (#{brand.total})
@@ -36,7 +36,7 @@
               %ul
                 - @modelos_group.each do |modelo|
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "/camiones-opciones/modelo/#{modelo.modelo}"}
                       = modelo.modelo
                       %small
                         (#{modelo.total})
@@ -48,7 +48,7 @@
               %ul
                 - @km_group.each do |km|
                   %li
-                    %a{:href => "#"}
+                    %a{:href => "/camiones-opciones/kilometraje/#{km.kilometraje}"}
                       = km.kilometraje
                       %small
                         (#{km.total})
