se agrega el remote true para las busquedas y el kaminari

--- a/app/views/includes/_paginator.html.haml
+++ b/app/views/includes/_paginator.html.haml
@@ -1,4 +1,4 @@
 .clearfix.filters-container
   .text-right
     .pagination-container
-      = paginate object
+      = paginate object, remote: true
