--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta name="keywords" content="MediaCenter, Template, eCommerce">
   <meta name="robots" content="all">
-
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= stylesheet_link_tag 'bootstrap.min', 'main', 'orange', 'owl.carousel', 'owl.transitions', 'lightbox', 'animate.min', 'rateit', 'bootstrap-select.min', 'config','orange','font-awesome.min',  'data-turbolinks-track' => true  %>
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
@@ -19,9 +19,7 @@
 <%= yield %>
 <%= render 'includes/footer' %>
 
-
-
-<%= javascript_include_tag 'jquery-1.11.1.min', 'bootstrap.min', 'bootstrap-hover-dropdown.min', 'owl.carousel.min', 'echo.min', 'jquery.easing-1.3.min', 'bootstrap-slider.min', 'jquery.rateit.min', 'lightbox.min', 'bootstrap-select.min', 'wow.min', 'scripts', 'switchstylesheet' %>
+<%= javascript_include_tag 'bootstrap.min', 'bootstrap-hover-dropdown.min', 'owl.carousel.min', 'echo.min', 'jquery.easing-1.3.min', 'bootstrap-slider.min', 'jquery.rateit.min', 'lightbox.min', 'bootstrap-select.min', 'wow.min', 'scripts', 'switchstylesheet' %>
 <%= yield :footer %>
 
 </body>
