--- a/app/views/pages/repuestos.html.haml
+++ b/app/views/pages/repuestos.html.haml
@@ -19,4 +19,5 @@
             #grid-container.tab-pane.active
               .category-product.inner-top-vs
                 .row
-                  = render partial: 'shared/list_extras'
+                  #list_extras
+                    = render partial: 'shared/list_extras'
