--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <%= form_for @service, :url => miserviciosnew_path, :method=>'post' do |f|  %>
+    <%= form_for @service, :url => miserviciosedit_path, :method=>'post' do |f|  %>
 
         <div class="row">
           <div class="col-md-6">
@@ -48,9 +48,6 @@
         </div>
 
 
-
-
-
         <div class="row">
 
           <div class="col-md-6">
@@ -60,11 +57,7 @@
             </div>
           </div>
 
-
-
         </div>
-
-
 
 
         <div class="row">
