se agrega paginacion real a los repuestos

--- a/app/views/admin/extras/index.html.erb
+++ b/app/views/admin/extras/index.html.erb
@@ -111,9 +111,11 @@
 
       </table>
     </div>
-
-
-
+    <div class = 'clearfix filters-container text-right' >
+      <div class= 'pagination-container' >
+         <%= paginate @extras %>
+      </div>
+   </div>
   </div>
 </div>
 <!-- /.row -->
