--- a/app/views/admin/trucks/index.html.erb
+++ b/app/views/admin/trucks/index.html.erb
@@ -35,7 +35,7 @@
 </div>
 
 <!--Tabla normal-->
-<!-- /.row
+<!-- /.row-->
 <div class="row">
   <div class="col-lg-12">
 
@@ -55,7 +55,7 @@
         </tr>
         </thead>
         <tbody>
-        <% @trucks.each do |truck| %>
+        <% @trucks_filter.each do |truck| %>
             <tr>
 
 
@@ -117,14 +117,16 @@
     </div>
 
 
-
+    <div>
+      <%= paginate @trucks_filter %>
+    </div>
   </div>
 </div>
--->
 
 
 
 
+<!--
 <div ng-controller="ctrlRead">
 
   <div class="table-responsive">
@@ -203,7 +205,7 @@
   </table>
 </div>
 </div>
-
+!-->
 
 <!-- Button trigger modal -->
 
