se agrega al panel del admin el tema de services ya que no entraba

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -64,12 +64,12 @@
             <i class="fa fa-shopping-cart fa-5x"></i>
           </div>
           <div class="col-xs-9 text-right">
-            <div class="huge">0</div>
+            <div class="huge"><%= @services %></div>
             <div>Servicios</div>
           </div>
         </div>
       </div>
-      <a href="#">
+      <a href="<%= admin_services_path %>">
         <div class="panel-footer">
           <span class="pull-left">Ver Servicios</span>
           <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
