--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -99,9 +99,7 @@
 
       </table>
     </div>
-
-
-
+    <%= render partial: "includes/paginator_admin" , locals: {object: @services}%>
   </div>
 </div>
 <!-- /.row -->
