mejoras en el admin

--- a/app/views/admin/extras/new.html.erb
+++ b/app/views/admin/extras/new.html.erb
@@ -185,7 +185,7 @@
 
 
     <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-    <%=  link_to 'Cancelar', admin_trucks_path, :class=>'btn btn-warning' %>
+    <%=  link_to 'Cancelar', admin_extras_path, :class=>'btn btn-warning' %>
 <% end %>
 
 </div>
