--- a/app/views/admin/services/edit.html.erb
+++ b/app/views/admin/services/edit.html.erb
@@ -189,7 +189,7 @@
 
 
         <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_trucks_path, :class=>'btn btn-warning' %>
+        <%=  link_to 'Cancelar', admin_services_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
