--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -31,7 +31,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="index.html">Camion 365</a>
+    <a class="navbar-brand" href="<%= root_path %>">Camion 365</a>
   </div>
   <!-- Top Menu Items -->
   <ul class="nav navbar-right top-nav">
