se agrega kaminari al truck del cliente

--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -139,7 +139,7 @@
       </table>
     </div>
 
-
+    <%= render partial: "includes/paginator_admin" , locals: {object: @trucks}%>
 
   </div>
 </div>
