--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -1,4 +1,3 @@
-
 <%
    camiones = 0
    @user.offer.each do |item|
@@ -10,7 +9,7 @@
   <div class="col-lg-12">
     <h1 class="page-header">
 
-      Camiones   <small><%= camiones-@trucks.size %></small>/<%= camiones %>
+      Camiones   <small><%= camiones-@trucks.total_count %></small>/<%= camiones %>
     </h1>
 
   </div>
