--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -35,7 +35,7 @@
 <div class="row">
   <div class="col-md-12">
     <p>
-      <% if camiones-@trucks.size > 0 %>
+      <% if camiones-@trucks.total_count > 0 %>
     <!--  <%= link_to 'Nuevo Camion', micamionesnewpost_path, :method=>'get', :class=>'btn  btn-primary' %>-->
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
            Nuevo Vehiculo
