--- a/app/views/pages/mirepuestos.html.erb
+++ b/app/views/pages/mirepuestos.html.erb
@@ -10,7 +10,7 @@
   <div class="col-lg-12">
     <h1 class="page-header">
 
-      Repuestos   <small><%= extras-@extras.count %></small>/<%= extras %>
+      Repuestos   <small><%= extras-@extras.total_count %></small>/<%= extras %>
     </h1>
 
   </div>
@@ -36,7 +36,7 @@
 <div class="row">
   <div class="col-md-12">
     <p>
-      <% if extras-@extras.count > 0 %>
+      <% if extras-@extras.total_count > 0 %>
           <%= link_to 'Nuevo Repuesto', mirepuestosnew_path, :method=>'get', :class=>'btn  btn-primary' %>
 
       <% end %>
@@ -135,7 +135,7 @@
       </table>
     </div>
 
-
+    <%= render partial: "includes/paginator_admin" , locals: {object: @extras}%>
 
   </div>
 </div>
