--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -168,7 +168,7 @@
 
 
     <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-    <%=  link_to 'Cancelar', admin_trucks_path, :class=>'btn btn-warning' %>
+    <%=  link_to 'Cancelar', mirepuestos_path, :class=>'btn btn-warning' %>
 <% end %>
 
 
