--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -149,7 +149,7 @@
 
 
         <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_services_path, :class=>'btn btn-warning' %>
+        <%=  link_to 'Cancelar', miservicios_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
