se agrega parche

--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -82,7 +82,7 @@
               </td>
 
               <td>
-                <%=   truck.brand_truck.name %>
+                <%=   truck.brand_truck.name  if truck.brand_truck %>
               </td>
 
               <td>
