se agregan validaciones para que la app no rebiente

--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -78,7 +78,7 @@
               </td>
 
               <td>
-                <%=  truck.type_truck.name %>
+                <%=  truck.type_truck.name if truck.type_truck %>
               </td>
 
               <td>
@@ -86,7 +86,7 @@
               </td>
 
               <td>
-                <%=  truck.state.name %>
+                <%=  truck.state.name if truck.state %>
               </td>
 
               <td>
