--- a/app/views/pages/mirepuestos.html.erb
+++ b/app/views/pages/mirepuestos.html.erb
@@ -77,11 +77,11 @@
               </td>
 
               <td>
-                <%=  extra.brand_extra.name %>
+                <%=  extra.brand_extra.name if extra.brand_extra %>
               </td>
 
               <td>
-                <%=   extra.type_truck.name %>
+                <%=   extra.type_truck.name if extra.type_truck%>
               </td>
 
 
