--- a/app/views/pages/miservicios.html.erb
+++ b/app/views/pages/miservicios.html.erb
@@ -73,7 +73,7 @@
               </td>
 
               <td>
-                <%= servicio.type_service.name %>
+                <%= servicio.type_service.name  if servicio.type_service %>
               </td>
 
 
