--- a/app/views/admin/extras/index.html.erb
+++ b/app/views/admin/extras/index.html.erb
@@ -64,15 +64,15 @@
 
               <td>
 
-                <%=  extra.type_truck.name  %>
+                <%=  extra.type_truck.name  if extra.type_truck %>
               </td>
 
               <td>
-                <%= extra.brand_extra.name %>
+                <%= extra.brand_extra.name if extra.brand_extra %>
               </td>
 
               <td>
-                <%= extra.state.name %>
+                <%= extra.state.name if extra.state %>
               </td>
 
 
