se agrega validacion para que no explote

--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -182,8 +182,8 @@
                 <table class="table"><tbody>
 
                 <tr class="nymou"><td>Modelo:</td><td class="pull-right"><%= @truck.modelo %></td></tr>
-                <tr class="nymou"><td>Marca:</td><td class="pull-right"><%= @truck.brand_truck.name %></td></tr>
-                <tr class="nymou"><td>Ubicación:</td><td class="pull-right"><%= @truck.state.name %> - <%= @truck.city.name %></td></tr>
+                <tr class="nymou"><td>Marca:</td><td class="pull-right"><%= @truck.brand_truck.name if @truck.brand_truck %></td></tr>
+                <tr class="nymou"><td>Ubicación:</td><td class="pull-right"><%= @truck.state.name  if @truck.state %> - <%= @truck.city.name if @truck.city %></td></tr>
                 <tr class="nymou"><td>Kilometraje:</td><td class="pull-right"><%= @truck.kilometraje %> Km</td></tr>
                 <tr class="nymou"><td>Estado:</td><td class="pull-right">
                   <% if( @truck.estado == 0) %>
