--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -129,7 +129,7 @@
         </li>
         <li class="divider"></li>
         <li>
-          <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+          <%= link_to ' Log Out ', destroy_user_session_path , method: "delete" , class: "fa fa-power-off"%>
         </li>
       </ul>
     </li>
