--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -32,6 +32,21 @@
 
     <%= form_for @truck, :url => admin_trucks_path, :method=>'post' do |f|  %>
         <%= f.hidden_field :type_truck_id, :value=>params['v']  %>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :sub_truck_id, 'Sub tipo' %>
+            <%= f.collection_select :sub_truck_id, SubTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+          </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <%= f.label :price, 'Precio' %>
+                <%= f.text_field :price, :class =>'form-control'  %>
+            </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
