--- a/app/views/shared/_buscador.html.haml
+++ b/app/views/shared/_buscador.html.haml
@@ -1,5 +1,5 @@
 - if @result.nil?
-  %h2 CAMIONES
+  %h2 Camiones
   = render partial: 'shared/list_trucks'
   %h2 Repuestos
   = render partial: 'shared/list_extras'
