--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -92,16 +92,13 @@
                         <%= f.text_field :price, :class =>'form-control'  %>
                     </div>
                 </div>
-
-
-            <div class="col-md-6">
-              <div class="form-group">
-                <%= f.label :pesobruto, 'Peso bruto' %>
-                <%= f.text_field :pesobruto, :class =>'form-control'  %>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :pesobruto, 'Peso bruto' %>
+                  <%= f.text_field :pesobruto, :class =>'form-control'  %>
+                </div>
               </div>
             </div>
-
-          </div>
 
 
 
@@ -117,7 +114,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <%= f.label :city_id, 'Ciudad' %>
-                <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+                <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control' } %>
               </div>
             </div>
 
@@ -137,7 +134,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <%= f.label :placa_city_id, 'Ciudad placa' %>
-                <%= f.select(:placa_city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+                <%= f.collection_select :placa_city_id, @placaCities.order(:name),:id,:name, {}, { class: 'form-control' } %>
               </div>
             </div>
 
@@ -224,11 +221,8 @@
             </script>
           </div>
 
-
-
-
-
         </div>
+
         <div role="tabpanel" class="tab-pane" id="profile">
 
 
@@ -1264,7 +1258,7 @@
                     });
 
                 },
-                url:"/admin/states/"+this.value+"/cities.json"
+                url:"/departamentos/"+this.value
             });
 
         });
@@ -1304,107 +1298,10 @@
                     });
 
                 },
-                url:"/admin/states/"+this.value+"/cities.json"
+                url:"/departamentos/"+this.value
             });
 
         });
-
-
-
-        //Cargo dato cuando carga la pagina
-
-
-
-        function loader(data){
-            $('#truck_city_id option').html('Cargando...')
-
-        };
-
-        function error(data){
-            alert("Error enviados los datos");
-        };
-
-
-
-        $.ajax({
-            async: true,
-            type: "GET",
-            dataType: 'json',
-            beforeSend:loader,
-            error:error,
-            success: function (msg) {
-
-    console.log(msg)
-                $('#truck_city_id').html('')
-
-
-                $.each(msg, function(index, value) {
-                    console.log('<option value="'+value.id+'">'+value.name+'</option>');
-                    if(value.id == '<%= @truck.city_id %>'){
-                        $('#truck_city_id').append('<option selected value="'+value.id+'">'+value.name+'</option>')
-                    }else{
-                        $('#truck_city_id').append('<option value="'+value.id+'">'+value.name+'</option>')
-                    }
-
-                });
-
-
-            },
-            url:"/admin/states/<%= @truck.state_id %>/cities.json"
-        });
-
-
-
-
-
-
-        function loader(data){
-
-            $('#truck_placa_city_id option').html('Cargando...')
-        };
-
-        function error(data){
-            alert("Error enviados los datos");
-        };
-
-
-
-        $.ajax({
-            async: true,
-            type: "GET",
-            dataType: 'json',
-            beforeSend:loader,
-            error:error,
-            success: function (msg) {
-
-                console.log(msg)
-
-                $('#truck_placa_city_id').html('')
-
-
-
-
-
-                $.each(msg, function(index, value) {
-                    console.log('<option value="'+value.id+'">'+value.name+'</option>');
-                    if(value.id == '<%= @truck.city_id %>'){
-                        $('#truck_placa_city_id').append('<option selected value="'+value.id+'">'+value.name+'</option>')
-                    }else{
-                        $('#truck_placa_city_id').append('<option value="'+value.id+'">'+value.name+'</option>')
-                    }
-
-                });
-
-            },
-            url:"/admin/states/<%= @truck.placa_state_id %>/cities.json"
-        });
-
-
-
-
-
-
-
 
 
     };
