se agrega validacion para que la app no explote al buscar camiones sin relacion con otras tablas

--- a/app/views/admin/trucks/index.html.erb
+++ b/app/views/admin/trucks/index.html.erb
@@ -67,15 +67,15 @@
               </td>
 
               <td>
-                <%=  truck.type_truck.name %>
+                <%=  truck.type_truck.name if truck.type_truck %>
               </td>
 
               <td>
-                <%=   truck.brand_truck.name %>
+                <%=   truck.brand_truck.name if truck.brand_truck %>
               </td>
 
               <td>
-                <%=  truck.state.name %>
+                <%=  truck.state.name if truck.state%>
               </td>
 
 
