--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= stylesheet_link_tag 'admin/bootstrap.min' %>
   <%= stylesheet_link_tag 'admin/sb-admin' %>
   <%= stylesheet_link_tag 'admin/plugins/morris' %>
-  <%= stylesheet_link_tag 'admin/font-awesome/css/font-awesome.min' %>
+  <%#= stylesheet_link_tag 'admin/font-awesome/css/font-awesome.min' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
